درست کردن دکمه های صفحه اصلی

--- a/home.html
+++ b/home.html
@@ -14,7 +14,8 @@
             <li draggable="true" id="a"><a href="#skills">مهارت‌ها</a></li>
             <li draggable="true" id="a"><a href="#profile">پروفایل</a></li>
             <li><a href="#contact">تماس با من</a></li>
-            <li><a href="/acc/signup/signup-page.html" id="acc">ورود </a></li>
+            <li id="log-sign"><a href="acc/signup/signup-page.html">ورود / ثبت نام </a></li>
+            <li id="account"><a href="acc/panel/panel.html">حساب کاربری</a></li>
             <li><a class="b" href="#">کاربردی</a></li>
         </ul>
     </nav>
